--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,11 +14,30 @@
 # For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
 
 stages:          # List of stages for jobs, and their order of execution
-  - build
-  - package
-  - e2e
-  - cleanup
-  - release
+    - test
+    - build
+    - package
+    - e2e
+    - cleanup
+
+test:
+    stage: test
+    image: python:3.10-slim-bullseye
+    script:
+        - pip install pipenv
+        - pipenv install --dev
+        - pipenv run coverage run -m pytest --junitxml=report.xml tests
+        - pipenv run coverage report
+        - pipenv run coverage xml
+    coverage: '/(?i)total.*? (100(?:\.0+)?\%|[1-9]?\d(?:\.\d+)?\%)$/'
+    artifacts:
+      reports:
+        junit: report.xml
+        coverage_report:
+          coverage_format: cobertura
+          path: coverage.xml
+
+
 
 
 build:   # This job runs in the build stage, which runs first.
@@ -28,7 +47,10 @@ build:   # This job runs in the build stage, which runs first.
     - pip install pipenv
     - pipenv install --dev
     - pipenv run python3 -m build
-
+  artifacts:
+    paths:
+        - dist
+    expire_in: 1 hour
 
 containerize:
     stage: package
@@ -36,16 +58,16 @@ containerize:
     before_script:
         - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}
     script:
-        - docker build . -t ${CI_REGISTRY_IMAGE}/gcd:${CI_COMMIT_REF_SLUG}
-        - docker push ${CI_REGISTRY_IMAGE}/connect4:${CI_COMMIT_REF_SLUG}
+        - docker-compose build #. -t ${CI_REGISTRY_IMAGE}/gcd:${CI_COMMIT_REF_SLUG}
+        - docker-compose push #${CI_REGISTRY_IMAGE}/connect4:${CI_COMMIT_REF_SLUG}
     after_script:
-        - docker rmi ${CI_REGISTRY_IMAGE}/connect4:${CI_COMMIT_REF_SLUG}
+        - docker rmi ${CI_REGISTRY_IMAGE}/connect4:latest #${CI_COMMIT_REF_SLUG}
 
 e2e-test:
     stage: e2e
     image: docker:20.10.15-dind
     variables:
-        CONNECT4_CONTAINER_IMAGE: ${CI_REGISTRY_IMAGE}/connect4:${CI_COMMIT_REF_SLUG}
+      CONTAINER_IMAGE: ${CI_REGISTRY_IMAGE}/connect4:latest #${CI_COMMIT_REF_SLUG}
     before_script:
         - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}
     script:
@@ -53,9 +75,9 @@ e2e-test:
         - python3 -m ensurepip
         - pip3 install pipenv
         - pipenv install --dev
-        - pipenv run behave tests/e2e
+        - pipenv run behave
     after_script:
-        - docker rmi ${CI_REGISTRY_IMAGE}/connect4:${CI_COMMIT_REF_SLUG}
+        - docker rmi ${CI_REGISTRY_IMAGE}/connect4:latest #${CI_COMMIT_REF_SLUG}
 
 remove-container:
     stage: cleanup
@@ -70,18 +92,6 @@ remove-container:
         variables:
             - $CI_COMMIT_TAG
 
-release:
-    stage: release
-    rules:
-
-        - if: $CI_COMMIT_TAG != null
-          when: manual
-    image: registry.gitlab.com/gitlab-org/release-cli:latest
-    script:
-        - release-cli create
-            --name "connect4-${CI_COMMIT_TAG}"
-            --description "A docker image is available at ${CI_REGISTRY_IMAGE}/connect4:${CI_COMMIT_REF_SLUG}"
-            --tag-name "${CI_COMMIT_TAG}" 
 
         
 
