--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ build:   # This job runs in the build stage, which runs first.
   stage: build
   image: python:3.10-slim-bullseye 
   script:
+    - pip install build
     - pip install pipenv
     - pipenv install --dev
     - pipenv run python3 -m build
