--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,9 +24,9 @@ build:   # This job runs in the build stage, which runs first.
   stage: build
   image: python:3.10-slim-bullseye 
   script:
-    - pip install build
     - pip install pipenv
     - pipenv install --dev
+    - pipenv install build
     - pipenv run python3 -m build
   artifacts:
     paths:
