--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = serifenur.oezdemir@th-deg.de
 description = connect 4
 
 [options]
-packages = connect4
+packages = src
 
 [options.entry_points]
 console_scripts =
