--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,6 +55,7 @@ e2e-test:
         - apk add --update python3
         - python3 -m ensurepip
         - pip3 install pipenv
+        - pipenv install behave
         - pipenv install --dev
         - pipenv run behave
     after_script:
