--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,7 +70,7 @@ remove-container:
     script:
         - wget -O /usr/bin/reg https://github.com/genuinetools/reg/releases/download/v0.16.0/reg-linux-amd64
         - chmod +x /usr/bin/reg
-        - reg rm ${CI_REGISTRY_IMAGE}/gcd:${CI_COMMIT_REF_SLUG}
+        - reg rm ${CI_REGISTRY_IMAGE}/connect4:latest #:${CI_COMMIT_REF_SLUG}
     except:
         variables:
             - $CI_COMMIT_TAG
